--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Academlo Store</title>
+    
 </head>
 <body>
 
@@ -29,7 +30,7 @@
 
     <header class="header">
         <!-- Header -->
-        <img src="./assets/img/logo.png" alt="logo" class="logo">
+        <link rel="stylesheet" href=""><img src="./assets/img/logo.png" alt="logo" class="logo">
     </header>
 
     <section class="container-fluid position-sticky top-0">
