--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Styles -->
     <link rel="stylesheet" href="./estilo.css">
-    <link rel="stylesheet" href="./diseño.css">
+    <link rel="stylesheet" href="./CSS/layout.css">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/b22286fea9.js" crossorigin="anonymous"></script>
     <!--Font Oswald  -->
